--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="game-container">
-      <div class="current">X</div>
+      <div class="current">Player X's Turn</div>
       <div id="game-grid">
         <button class="grid-item"></button>
         <button class="grid-item"></button>
